fixed dark mode for search bars

--- a/src/mode/darkMode.scss
+++ b/src/mode/darkMode.scss
@@ -153,4 +153,19 @@
       }
     }
   }
+
+  .search-bar-container {
+    background-color: #333;
+    color: #999;
+    
+    .search-bar-content {
+      background-color: #333;
+      color: #999;
+
+      
+    }
+    .search-bar-content-item {
+      color: #999;
+    }
+  }
 }
